--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,7 +22,9 @@ website:
       - href: Ashish_Resume_One_Page_Final.pdf
         text: Resume
         target: _blank
+    tools:
       - icon: bi-moon-fill
+        href: "#"
         id: theme-toggle
         aria-label: "Toggle dark mode"
   page-footer: 
@@ -40,4 +42,62 @@ format:
       - text: |
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
           <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    include-after-body:
+      - text: |
+          <script>
+            // Wait for everything to be fully loaded, including Quarto navbar tools
+            window.addEventListener('load', function() {
+              function initThemeToggle() {
+                // Try multiple selectors to find the theme toggle button
+                const themeToggle = document.querySelector('a[aria-label="Toggle dark mode"]') || 
+                                  document.querySelector('.quarto-navigation-tool');
+                const htmlElement = document.documentElement;
+                
+                if (!themeToggle) {
+                  // Try again after a short delay
+                  setTimeout(initThemeToggle, 100);
+                  return;
+                }
+                
+                const themeIcon = themeToggle.querySelector('i');
+                if (!themeIcon) {
+                  setTimeout(initThemeToggle, 100);
+                  return;
+                }
+                
+                // Add ID and fix the double "bi-" prefix in the icon class
+                themeToggle.id = 'theme-toggle';
+                
+                // Check for saved theme preference or default to light mode
+                const currentTheme = localStorage.getItem('theme') || 'light';
+                
+                // Set initial theme
+                if (currentTheme === 'dark') {
+                  htmlElement.setAttribute('data-bs-theme', 'dark');
+                  themeIcon.className = 'bi bi-sun-fill';
+                } else {
+                  htmlElement.setAttribute('data-bs-theme', 'light');
+                  themeIcon.className = 'bi bi-moon-fill';
+                }
+                
+                // Theme toggle functionality
+                themeToggle.addEventListener('click', function(e) {
+                  e.preventDefault();
+                  const currentTheme = htmlElement.getAttribute('data-bs-theme');
+                  
+                  if (currentTheme === 'dark') {
+                    htmlElement.setAttribute('data-bs-theme', 'light');
+                    themeIcon.className = 'bi bi-moon-fill';
+                    localStorage.setItem('theme', 'light');
+                  } else {
+                    htmlElement.setAttribute('data-bs-theme', 'dark');
+                    themeIcon.className = 'bi bi-sun-fill';
+                    localStorage.setItem('theme', 'dark');
+                  }
+                });
+              }
+              
+              initThemeToggle();
+            });
+          </script>
     page-layout: full # Controls the width of the container
